--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "nodemon --exec tsx server.ts",
     "start": "tsx server.ts",
+    "start:prod": "node dist/server.js",
     "build": "tsc",
     "type-check": "tsc --noEmit"
   },
@@ -15,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@solana/web3.js": "^1.98.4",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
@@ -22,11 +24,11 @@
     "openai": "^5.12.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10",
-    "typescript": "^5.3.3",
-    "tsx": "^4.7.0",
-    "@types/node": "^20.11.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17"
+    "@types/node": "^20.11.0",
+    "nodemon": "^3.1.10",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   }
 }
