--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "node-fetch": "^3.3.2",
-    "openai": "^5.12.2"
+    "openai": "^5.12.2",
+    "x402-express": "^0.7.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
